[gd_scene load_steps=17 format=3 uid="uid://c5idjgy4afmho"]

[ext_resource type="Script" uid="uid://b0y4h2xmmwr2e" path="res://script/mushroom.gd" id="1_4125a"]
[ext_resource type="Texture2D" uid="uid://8j811yk5hue7" path="res://sprite/mushrooms.png" id="2_8mpd3"]
[ext_resource type="Script" uid="uid://cntkynd3vpuvl" path="res://script/entity.gd" id="2_e0v0r"]
[ext_resource type="AudioStream" uid="uid://bkwkwqtdh2goo" path="res://sounds/power up.wav" id="3_xbh4k"]
[ext_resource type="AudioStream" uid="uid://bfhk31y2khk5s" path="res://sounds/rise up.wav" id="3_yysf2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v7c8f"]
size = Vector2(9.75486, 7.44074)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cpp18"]
size = Vector2(10.0103, 1.27963)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kg8q6"]
size = Vector2(1.21936, 1.27965)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sjlml"]
size = Vector2(2, 2.39006)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_exsck"]
size = Vector2(2, 2.44695)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_euomj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f4pa7"]
size = Vector2(20, 33.247185)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pmrqf"]
size = Vector2(19.5238, 28.7543)

[sub_resource type="Animation" id="Animation_xfln1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -8)]
}

[sub_resource type="Animation" id="Animation_kd8tc"]
resource_name = "spawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 16), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gu7y0"]
_data = {
&"RESET": SubResource("Animation_xfln1"),
&"spawn": SubResource("Animation_kd8tc")
}

[node name="mushroom" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("2_e0v0r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3.09262)
scale = Vector2(0.820104, 0.781477)
shape = SubResource("RectangleShape2D_v7c8f")

[node name="left bottom" type="Area2D" parent="."]
position = Vector2(3.55271e-15, -8)
scale = Vector2(0.820104, 0.781477)

[node name="CollisionShape2D" type="CollisionShape2D" parent="left bottom"]
position = Vector2(-9.14518, 10.8768)
rotation = -3.14159
scale = Vector2(0.121811, -1)
shape = SubResource("RectangleShape2D_cpp18")

[node name="right bottom" type="Area2D" parent="."]
position = Vector2(-5.96046e-08, -8)
scale = Vector2(0.820104, 0.781477)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="right bottom"]
position = Vector2(9.14518, 10.8768)
shape = SubResource("RectangleShape2D_kg8q6")

[node name="Node2D" type="Node2D" parent="."]
process_mode = 3
position = Vector2(0, -8)
script = ExtResource("1_4125a")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("3_xbh4k")

[node name="left side" type="Area2D" parent="."]
position = Vector2(0, -8)
scale = Vector2(1, 0.331275)

[node name="CollisionShape2D" type="CollisionShape2D" parent="left side"]
position = Vector2(-8, 18.3084)
scale = Vector2(1, 2.69044)
shape = SubResource("RectangleShape2D_sjlml")

[node name="right side" type="Area2D" parent="."]
position = Vector2(0, -8)
scale = Vector2(0.95107, 0.380408)

[node name="CollisionShape2D" type="CollisionShape2D" parent="right side"]
position = Vector2(8, 16.0397)
scale = Vector2(1, 2.36695)
shape = SubResource("RectangleShape2D_exsck")

[node name="edible" type="Area2D" parent="."]
position = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="edible"]
scale = Vector2(3.07808, 3.07808)
shape = SubResource("RectangleShape2D_euomj")

[node name="bumpable" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bumpable"]
position = Vector2(0, -3)
scale = Vector2(0.41404358, -0.18046641)
shape = SubResource("RectangleShape2D_f4pa7")

[node name="Mushrooms" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_8mpd3")
hframes = 2

[node name="mushroom" type="Area2D" parent="Mushrooms"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mushrooms/mushroom"]
position = Vector2(0, -3)
scale = Vector2(1.07219, 0.515997)
shape = SubResource("RectangleShape2D_pmrqf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Mushrooms"]
libraries = {
&"": SubResource("AnimationLibrary_gu7y0")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Mushrooms/AnimationPlayer"]
position = Vector2(0, -8)
stream = ExtResource("3_yysf2")

[connection signal="body_exited" from="left bottom" to="." method="_on_side_checks_body_exited"]
[connection signal="body_exited" from="left bottom" to="Node2D" method="_on_side_checks_body_exited"]
[connection signal="body_entered" from="right bottom" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="right bottom" to="." method="_on_side_checks_body_exited"]
[connection signal="body_exited" from="right bottom" to="Node2D" method="_on_side_checks_body_exited"]
[connection signal="body_entered" from="left side" to="." method="_on_left_side_body_entered"]
[connection signal="body_entered" from="right side" to="." method="_on_right_side_body_entered"]
[connection signal="area_entered" from="bumpable" to="." method="_on_bumpable_area_entered"]
[connection signal="area_entered" from="Mushrooms/mushroom" to="." method="_on_mushroom_area_entered"]
[connection signal="area_entered" from="Mushrooms/mushroom" to="Node2D" method="_on_area_2d_area_entered"]
